[gd_scene load_steps=28 format=3 uid="uid://cctkoql7wvni0"]

[ext_resource type="Script" path="res://scripts/colossus_knight.gd" id="1_h00j2"]
[ext_resource type="Texture2D" uid="uid://gg0r7h7bjewa" path="res://scenes/enemy_colossus_knight.png" id="2_10pqu"]
[ext_resource type="PackedScene" uid="uid://cw0dyuimranom" path="res://scenes/health_component.tscn" id="3_6xkw0"]
[ext_resource type="PackedScene" uid="uid://b05t7qod7tx3" path="res://scenes/hitbox_component.tscn" id="4_0xlcu"]
[ext_resource type="PackedScene" uid="uid://x82pl1gdhc0g" path="res://scenes/popup_component.tscn" id="5_x7jom"]
[ext_resource type="PackedScene" uid="uid://jy4d2cdbie5j" path="res://scenes/floating_numbers.tscn" id="6_dhwd4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sq0we"]
atlas = ExtResource("2_10pqu")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xtic"]
atlas = ExtResource("2_10pqu")
region = Rect2(512, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8srq"]
atlas = ExtResource("2_10pqu")
region = Rect2(768, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_t025w"]
atlas = ExtResource("2_10pqu")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhf82"]
atlas = ExtResource("2_10pqu")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_kglsa"]
atlas = ExtResource("2_10pqu")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0evk"]
atlas = ExtResource("2_10pqu")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfxlu"]
atlas = ExtResource("2_10pqu")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mt1xw"]
atlas = ExtResource("2_10pqu")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kii3"]
atlas = ExtResource("2_10pqu")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kvlq"]
atlas = ExtResource("2_10pqu")
region = Rect2(512, 256, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_tquiv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq0we")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xtic")
}],
"loop": false,
"name": &"bash1",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8srq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t025w")
}],
"loop": true,
"name": &"charge1",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhf82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kglsa")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0evk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfxlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mt1xw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kii3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kvlq")
}],
"loop": false,
"name": &"slam1",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ewi6r"]
size = Vector2(55, 122)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7co38"]
size = Vector2(14, 61)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iwypv"]
radius = 18.0
height = 50.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rac27"]
size = Vector2(76, 134.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_h6smu"]
radius = 76.0066

[sub_resource type="Animation" id="Animation_jqdbf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0.501961)]
}

[sub_resource type="Animation" id="Animation_luqps"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 0, 0.501961)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a0rfo"]
_data = {
"RESET": SubResource("Animation_jqdbf"),
"hurt": SubResource("Animation_luqps")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2gbys"]
size = Vector2(88, 121)

[node name="colossus_knight" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 9
collision_mask = 9
script = ExtResource("1_h00j2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
clip_children = 2
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_tquiv")
animation = &"bash1"
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"source": "res://assets/enemy_colossus_knight.aseprite"
}

[node name="ColorRect" type="ColorRect" parent="AnimatedSprite2D"]
visible = false
offset_left = -105.0
offset_top = -114.0
offset_right = 83.0
offset_bottom = 82.0
color = Color(1, 0, 0, 0.501961)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_ewi6r")

[node name="PopupComponent" parent="." instance=ExtResource("5_x7jom")]
visible = false
position = Vector2(0, -80)
damage_numbers = ExtResource("6_dhwd4")

[node name="PopupComponent2" parent="." instance=ExtResource("5_x7jom")]
visible = false
position = Vector2(0, 29)
damage_numbers = ExtResource("6_dhwd4")

[node name="HealthComponent" parent="." instance=ExtResource("3_6xkw0")]
visible = false
MAX_HEALTH = 2000

[node name="HitboxComponent2" parent="." node_paths=PackedStringArray("health_component", "popup_location") instance=ExtResource("4_0xlcu")]
visible = false
position = Vector2(0, 34)
collision_layer = 4
collision_mask = 4
health_component = NodePath("../HealthComponent")
popup_location = NodePath("../PopupComponent2")

[node name="leg" type="CollisionShape2D" parent="HitboxComponent2"]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_7co38")
debug_color = Color(1, 0, 0, 0.419608)

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component", "popup_location") instance=ExtResource("4_0xlcu")]
visible = false
position = Vector2(1, -79)
collision_layer = 4
collision_mask = 4
health_component = NodePath("../HealthComponent")
popup_location = NodePath("../PopupComponent")

[node name="head" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(-10, 0)
shape = SubResource("CapsuleShape2D_iwypv")
debug_color = Color(1, 0, 0, 0.419608)

[node name="Shield" type="Area2D" parent="."]
visible = false

[node name="shield_hitbox" type="CollisionShape2D" parent="Shield"]
position = Vector2(-47, -4.75)
shape = SubResource("RectangleShape2D_rac27")
disabled = true
debug_color = Color(1, 0.87451, 0, 0.45098)

[node name="Detection_area" type="Area2D" parent="."]
visible = false
position = Vector2(0, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection_area"]
position = Vector2(-24, 0)
shape = SubResource("CircleShape2D_h6smu")

[node name="flip_timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="charge_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="bash_timer" type="Timer" parent="."]
one_shot = true

[node name="slam_timer" type="Timer" parent="."]
wait_time = 0.9
one_shot = true

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="hurt" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a0rfo")
}

[node name="Hurt_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Death_timer" type="Timer" parent="."]
one_shot = true

[node name="collision_body" type="CharacterBody2D" parent="."]
position = Vector2(0, 3)
rotation = 3.14159
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision_body"]
position = Vector2(23, 0.499998)
shape = SubResource("RectangleShape2D_2gbys")
disabled = true

[connection signal="death" from="HealthComponent" to="." method="_on_health_component_death"]
[connection signal="hit" from="HitboxComponent2" to="." method="_on_hitbox_component_2_hit"]
[connection signal="hit" from="HitboxComponent" to="." method="_on_hitbox_component_hit"]
[connection signal="area_entered" from="Shield" to="." method="_on_shield_area_entered"]
[connection signal="body_entered" from="Detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="Detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="flip_timer" to="." method="_on_flip_timer_timeout"]
[connection signal="timeout" from="bash_timer" to="." method="_on_bash_timer_timeout"]
[connection signal="timeout" from="slam_timer" to="." method="_on_slam_timer_timeout"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="Hurt_timer" to="." method="_on_hurt_timer_timeout"]
[connection signal="timeout" from="Death_timer" to="." method="_on_death_timer_timeout"]
